--- a/CW/app/src/main/res/layout/refill.xml
+++ b/CW/app/src/main/res/layout/refill.xml
@@ -17,8 +17,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Ананас"
-            android:textOff="Ананас"
+            android:textOn="Варенье"
+            android:textOff="Варенье"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -33,8 +33,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Апельсин"
-            android:textOff="Апельсин"
+            android:textOn="Карамель"
+            android:textOff="Карамель"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -49,8 +49,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Банан"
-            android:textOff="Банан"
+            android:textOn="К.Заварной"
+            android:textOff="К.Заварной"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -66,8 +66,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Виноград"
-            android:textOff="Виноград"
+            android:textOn="Майонез"
+            android:textOff="Майонез"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -85,8 +85,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Курага"
-            android:textOff="Курага"
+            android:textOn="Масло раст"
+            android:textOff="Масло раст"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -97,15 +97,15 @@
             android:layout_alignStart="@+id/gr_110" />
 
         <ToggleButton
-            android:id="@+id/f_6"
+            android:id="@+id/r_81"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Лимон"
-            android:textOff="Лимон"
-            android:textSize="14dp"
+            android:textOn="Томатная паста"
+            android:textOff="Томатная паста"
+            android:textSize="10dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
@@ -121,8 +121,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Мандарин"
-            android:textOff="Мандарин"
+            android:textOn="Сироп"
+            android:textOff="Сироп"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -140,8 +140,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_peache"
             android:gravity="center_vertical"
-            android:textOn="Персик"
-            android:textOff="Персик"
+            android:textOn="Соус"
+            android:textOff="Соус"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -157,8 +157,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_plum"
             android:gravity="center_vertical"
-            android:textOn="Слива"
-            android:textOff="Слива"
+            android:textOn="Сухари"
+            android:textOff="Сухари"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -167,47 +167,6 @@
             android:layout_alignTop="@+id/sf_92"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
-
-
-
-        <ToggleButton
-            android:id="@+id/f_10"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_chernosliv"
-            android:gravity="center_vertical"
-            android:textOn="Чернослив"
-            android:textOff="Чернослив"
-            android:textSize="13dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/sf_91"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="60dp" />
-
-        <ToggleButton
-            android:id="@+id/f_11"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_apple"
-            android:gravity="center_vertical"
-            android:textOn="Яблоко"
-            android:textOff="Яблоко"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_alignLeft="@+id/sf_93"
-            android:layout_alignStart="@+id/sf_93"
-            android:layout_alignTop="@+id/f_10" />
-
 
         <Button
             style="?android:attr/buttonStyleSmall"
