--- a/CW/app/src/main/res/layout/seafood.xml
+++ b/CW/app/src/main/res/layout/seafood.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        >
+        android:clickable="true">
         <ToggleButton
             android:id="@+id/gr_109"
             android:layout_width="100dp"
@@ -17,8 +17,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Ананас"
-            android:textOff="Ананас"
+            android:textOn="Анчоусы"
+            android:textOff="Анчоусы"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -33,8 +33,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Апельсин"
-            android:textOff="Апельсин"
+            android:textOn="Горбуша"
+            android:textOff="Горбуша"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -49,8 +49,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Банан"
-            android:textOff="Банан"
+            android:textOn="Икра"
+            android:textOff="Икра"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -66,8 +66,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Виноград"
-            android:textOff="Виноград"
+            android:textOn="Карп"
+            android:textOff="Карп"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -85,8 +85,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Курага"
-            android:textOff="Курага"
+            android:textOn="Кильки"
+            android:textOff="Кильки"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -97,15 +97,15 @@
             android:layout_alignStart="@+id/gr_110" />
 
         <ToggleButton
-            android:id="@+id/f_6"
+            android:id="@+id/sf_90"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Лимон"
-            android:textOff="Лимон"
-            android:textSize="14dp"
+            android:textOn="Креветки"
+            android:textOff="Креветки"
+            android:textSize="10dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
@@ -121,8 +121,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Мандарин"
-            android:textOff="Мандарин"
+            android:textOn="Лещ"
+            android:textOff="Лещ"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -140,8 +140,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_peache"
             android:gravity="center_vertical"
-            android:textOn="Персик"
-            android:textOff="Персик"
+            android:textOn="Лосось"
+            android:textOff="Лосось"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -157,8 +157,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_plum"
             android:gravity="center_vertical"
-            android:textOn="Слива"
-            android:textOff="Слива"
+            android:textOn="Осетр"
+            android:textOff="Осетр"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -168,18 +168,16 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-
-
         <ToggleButton
-            android:id="@+id/f_10"
+            android:id="@+id/sf_94"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_chernosliv"
+            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Чернослив"
-            android:textOff="Чернослив"
-            android:textSize="13dp"
+            android:textOn="Рак"
+            android:textOff="Рак"
+            android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
@@ -187,27 +185,152 @@
             android:layout_below="@+id/sf_91"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="60dp" />
+            android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/f_11"
+            android:id="@+id/sf_95"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_apple"
+            android:drawableTop="@drawable/fruit_tangerines"
             android:gravity="center_vertical"
-            android:textOn="Яблоко"
-            android:textOff="Яблоко"
+            android:textOn="Рыба"
+            android:textOff="Рыба"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignLeft="@+id/sf_93"
-            android:layout_alignStart="@+id/sf_93"
-            android:layout_alignTop="@+id/f_10" />
+            android:layout_alignTop="@+id/sf_94"
+            android:layout_alignLeft="@+id/sf_92"
+            android:layout_alignStart="@+id/sf_92" />
 
+        <ToggleButton
+            android:id="@+id/sf_96"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Сазан"
+            android:textOff="Сазан"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/sf_95"
+            android:layout_alignLeft="@+id/sf_93"
+            android:layout_alignStart="@+id/sf_93" />
+
+        <ToggleButton
+            android:id="@+id/sf_97"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Сайра"
+            android:textOff="Сайра"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/sf_94"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/sf_98"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Сардины"
+            android:textOff="Сардины"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignBottom="@+id/sf_97"
+            android:layout_centerHorizontal="true" />
+
+        <ToggleButton
+            android:id="@+id/sf_99"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Сельдь"
+            android:textOff="Сельдь"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/sf_98"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <ToggleButton
+            android:id="@+id/sf_100"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Скумбрия"
+            android:textOff="Скумбрия"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/sf_97"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/sf_101"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Судак"
+            android:textOff="Судак"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/sf_100"
+            android:layout_alignLeft="@+id/sf_98"
+            android:layout_alignStart="@+id/sf_98" />
+
+        <ToggleButton
+            android:id="@+id/sf_102"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_tangerines"
+            android:gravity="center_vertical"
+            android:textOn="Шпроты"
+            android:textOff="Шпроты"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignBottom="@+id/sf_101"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -216,10 +339,10 @@
             android:text="Назад"
             android:id="@+id/f_button_back"
             android:onClick="onClick"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="600dp" />
+            android:layout_below="@+id/sf_100"
+            android:layout_toLeftOf="@+id/sf_101"
+            android:layout_toStartOf="@+id/sf_101"
+            android:layout_marginTop="50dp" />
 
     </RelativeLayout>
 
