--- a/CW/app/src/main/res/layout/greenery.xml
+++ b/CW/app/src/main/res/layout/greenery.xml
@@ -17,8 +17,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_ananas"
             android:gravity="center_vertical"
-            android:textOn="Ананас"
-            android:textOff="Ананас"
+            android:textOn="Базилик"
+            android:textOff="Базилик"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -33,8 +33,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_orange"
             android:gravity="center_vertical"
-            android:textOn="Апельсин"
-            android:textOff="Апельсин"
+            android:textOn="Гвоздика"
+            android:textOff="Гвоздика"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -49,8 +49,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_banana"
             android:gravity="center_vertical"
-            android:textOn="Банан"
-            android:textOff="Банан"
+            android:textOn="Имбирь"
+            android:textOff="Имбирь"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -66,8 +66,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Виноград"
-            android:textOff="Виноград"
+            android:textOn="Кизил"
+            android:textOff="Кизил"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -85,8 +85,8 @@
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_dried_apricot"
             android:gravity="center_vertical"
-            android:textOn="Курага"
-            android:textOff="Курага"
+            android:textOn="Кинза"
+            android:textOff="Кинза"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -97,14 +97,14 @@
             android:layout_alignStart="@+id/gr_110" />
 
         <ToggleButton
-            android:id="@+id/f_6"
+            android:id="@+id/gr_114"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
             android:drawableTop="@drawable/fruit_lemon"
             android:gravity="center_vertical"
-            android:textOn="Лимон"
-            android:textOff="Лимон"
+            android:textOn="Кориандр"
+            android:textOff="Кориандр"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -115,14 +115,14 @@
             android:layout_alignStart="@+id/gr_111" />
 
         <ToggleButton
-            android:id="@+id/sf_91"
+            android:id="@+id/gr_115"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_tangerines"
+            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Мандарин"
-            android:textOff="Мандарин"
+            android:textOn="Лавровый лист"
+            android:textOff="Лавровый лист"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
@@ -134,80 +134,168 @@
             android:layout_marginTop="35dp" />
 
         <ToggleButton
-            android:id="@+id/sf_92"
+            android:id="@+id/gr_116"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_peache"
+            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Персик"
-            android:textOff="Персик"
+            android:textOn="Лук зелёный"
+            android:textOff="Лук зелёный"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/sf_91"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignTop="@+id/gr_115"
+            android:layout_alignLeft="@+id/gr_113"
+            android:layout_alignStart="@+id/gr_113" />
 
         <ToggleButton
-            android:id="@+id/sf_93"
+            android:id="@+id/gr_117"
             android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_plum"
+            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Слива"
-            android:textOff="Слива"
+            android:textOn="Лук-порей"
+            android:textOff="Лук-порей"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignTop="@+id/sf_92"
+            android:layout_alignTop="@+id/gr_116"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
 
-
-
         <ToggleButton
-            android:id="@+id/f_10"
+            android:id="@+id/gr_118"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_chernosliv"
+            android:drawableTop="@drawable/fruit_grape"
             android:gravity="center_vertical"
-            android:textOn="Чернослив"
-            android:textOff="Чернослив"
-            android:textSize="13dp"
-            android:textAlignment="center"
-            android:textColor="@color/color"
-            android:onClick="onToggleButtonClick"
-            android:checked="false"
-            android:layout_below="@+id/sf_91"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="35dp"
-            android:layout_marginBottom="60dp" />
-
-        <ToggleButton
-            android:id="@+id/f_11"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/button_background"
-            android:drawableTop="@drawable/fruit_apple"
-            android:gravity="center_vertical"
-            android:textOn="Яблоко"
-            android:textOff="Яблоко"
+            android:textOn="Мята"
+            android:textOff="Мята"
             android:textSize="14dp"
             android:textAlignment="center"
             android:textColor="@color/color"
             android:onClick="onToggleButtonClick"
             android:checked="false"
-            android:layout_alignLeft="@+id/sf_93"
-            android:layout_alignStart="@+id/sf_93"
-            android:layout_alignTop="@+id/f_10" />
+            android:layout_below="@+id/gr_115"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
 
+        <ToggleButton
+            android:id="@+id/gr_119"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Петрушка"
+            android:textOff="Петрушка"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/gr_118"
+            android:layout_alignLeft="@+id/gr_116"
+            android:layout_alignStart="@+id/gr_116" />
+
+        <ToggleButton
+            android:id="@+id/gr_120"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Салат"
+            android:textOff="Салат"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/gr_119"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <ToggleButton
+            android:id="@+id/gr_121"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Сельдерей"
+            android:textOff="Сельдерей"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/gr_118"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
+
+        <ToggleButton
+            android:id="@+id/gr_122"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Укроп"
+            android:textOff="Укроп"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignBottom="@+id/gr_121"
+            android:layout_centerHorizontal="true" />
+
+        <ToggleButton
+            android:id="@+id/gr_123"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Шпинат"
+            android:textOff="Шпинат"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_alignTop="@+id/gr_122"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <ToggleButton
+            android:id="@+id/gr_124"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/button_background"
+            android:drawableTop="@drawable/fruit_grape"
+            android:gravity="center_vertical"
+            android:textOn="Щавель"
+            android:textOff="Щавель"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textColor="@color/color"
+            android:onClick="onToggleButtonClick"
+            android:checked="false"
+            android:layout_below="@+id/gr_121"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="35dp" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -216,10 +304,10 @@
             android:text="Назад"
             android:id="@+id/f_button_back"
             android:onClick="onClick"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/gr_124"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="600dp" />
+            android:layout_marginTop="50dp" />
 
     </RelativeLayout>
 
