--- a/CW/app/src/main/res/layout/main.xml
+++ b/CW/app/src/main/res/layout/main.xml
@@ -133,6 +133,74 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="35dp" />
 
+    <ToggleButton
+        android:id="@+id/refill"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Заправка"
+        android:textOff="Заправка"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignBottom="@+id/meat"
+        android:layout_centerHorizontal="true" />
+
+    <ToggleButton
+        android:id="@+id/seafood"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Морепродукты"
+        android:textOff="Морепродукты"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignBottom="@+id/refill"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ToggleButton
+        android:id="@+id/cereals"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Крупы"
+        android:textOff="Крупы"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_below="@+id/meat"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="35dp" />
+
+    <ToggleButton
+        android:id="@+id/greenery"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/button_background"
+        android:gravity="center_vertical"
+        android:textOn="Зелень"
+        android:textOff="Зелень"
+        android:textSize="15dp"
+        android:textAlignment="center"
+        android:textColor="@color/color"
+        android:onClick="onToggleButtonClick"
+        android:checked="false"
+        android:layout_alignBottom="@+id/cereals"
+        android:layout_alignRight="@+id/refill"
+        android:layout_alignEnd="@+id/refill" />
+
     <Button
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
@@ -140,9 +208,10 @@
         android:text="Далее"
         android:id="@+id/next"
         android:onClick="onClick"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/fruit"
-        android:layout_alignEnd="@+id/fruit" />
+        android:layout_below="@+id/cereals"
+        android:layout_alignRight="@+id/cereals"
+        android:layout_alignEnd="@+id/cereals"
+        android:layout_marginTop="50dp" />
 
 
 </RelativeLayout>
